--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 ACCESS_TOKEN_SECRET=9167829156
-ACCESS_TOKEN_EXPIRY=1m
+ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=9345014831
 REFRESH_TOKEN_EXPIRY=10d
 
