--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,11 +16,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        run :  npm i 
-      # - run: npm i dotenv
-    # - run: pm2 start --env prod
+    - run: rm -rf node_modules
+    - run: npm i
+    - run: npm i dotenv
