--- a/.env
+++ b/.env
@@ -12,5 +12,5 @@ CLOUD_SECRET_KEY=S2k_FdagB4Q-D6yyTlnB9G1E4TE
 
 PORT=3000
 CORS_ORIGIN="*"
-DB_URL=mongodb+srv://ramaraghunathan18:Kairaa%40123@hrm.g8k7f.mongodb.net/
-# DB_URL=mongodb://localhost:27017/crm
+# DB_URL=mongodb+srv://ramaraghunathan18:Kairaa%40123@hrm.g8k7f.mongodb.net/
+DB_URL=mongodb://localhost:27017/crm
