--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 ACCESS_TOKEN_SECRET=9167829156
-ACCESS_TOKEN_EXPIRY=1d
+ACCESS_TOKEN_EXPIRY=5m
 REFRESH_TOKEN_SECRET=9345014831
 REFRESH_TOKEN_EXPIRY=10d
 
@@ -12,5 +12,5 @@ CLOUD_SECRET_KEY=S2k_FdagB4Q-D6yyTlnB9G1E4TE
 
 PORT=3000
 CORS_ORIGIN="*"
-DB_URL=mongodb+srv://ramaraghunathan18:Kairaa%40123@hrm.g8k7f.mongodb.net/
-# DB_URL=mongodb://localhost:27017/crm
+# DB_URL=mongodb+srv://ramaraghunathan18:Kairaa%40123@hrm.g8k7f.mongodb.net/
+DB_URL=mongodb://localhost:27017/crm
