--- a/.env
+++ b/.env
@@ -14,3 +14,12 @@ PORT=3000
 CORS_ORIGIN="*"
 DB_URL=mongodb+srv://ramaraghunathan18:Kairaa%40123@hrm.g8k7f.mongodb.net/
 # DB_URL=mongodb://localhost:27017/crm
+
+
+
+EMAIL_HOST=smtp.example.com
+EMAIL_PORT=587
+SMTP_SERVICE=Gmail
+EMAIL_USER=ramaraghunathan18@gmail.com
+EMAIL_PASS=uvrusaptyqjrayyv
+EMAIL_FROM=ramaraghunathan18@gmail.com
